# SAS_llm_query

./: .env.test  .gitignore  Makefile  README.md  chatbot_llm.py  codeqwen.py  create_db.py  crew_ai.py  docker-compose.yml  env.test  environment.yml  generate_services.sh  get_services.sh  main.py  microservice_info.txt  model_class.py  pyproject.toml  report.md  request_examples.txt  requirements.txt  run_simulations_codeqwen.sh  run_simulations_deepseek.sh  run_simulations_mini.sh  service_manager.py  service_params.txt  services.txt  simulate_codeqwen.py  simulate_deepseek.py  simulate_mini.py  summary.txt  temp.txt  temperature_data.db  test.md  test.py  user_llm.py  utils.py
_site/: index.html
app/: config.py  dependencies.yaml  main.py  run_microservices.py  run_service_manager.sh  services.toml
data/: exhibition_data.json  historic_data.json  services_state.json  travel.txt  user_feedback.csv
docs/: CONTRIBUTING.md  INSTALLATION.md  SAMPLES.md  SERVICES.md  STRUCTURE.md
dynamic/: codeqwen.py  examples.txt  main.py  query_refiner.py  service_generator.py  service_manager.py  test.py  utils.py
frontend/: package-lock.json  package.json
generated_services/: crowd_monitoring_service_service.py  historical_sites_service_service.py
param_conv/: sim1.txt  sim1mini.txt  sim2mini.txt  sim3mini.txt  sim4mini.txt
prev_chats/: answers.txt  sim1.txt  sim1mini.txt  sim2.txt  sim2min.txt  sim3mini.txt  sim4mini.txt  sim5mini.txt  simulate_output1.txt  simulate_output2.txt
runs/: test_run_cqwen.txt  test_run_deepseek.txt  test_run_mini.txt
tone/: sim1.txt  (+3 more)
(+524 files in other folders)
