[tool.poetry]
name = "test_project_crewai"
version = "0.1.0"
description = "test-project-crewai using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.41.1" }

[tool.poetry.scripts]
test_project_crewai = "test_project_crewai.main:run"
train = "test_project_crewai.main:train"
replay = "test_project_crewai.main:replay"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
